sigup page updata kariya ho

--- a/sky_nova/pubspec.yaml
+++ b/sky_nova/pubspec.yaml
@@ -16,7 +16,10 @@ dependencies:
   cloud_firestore:
   firebase_auth:
   flutter_animate:
+  intl:
+  image_picker :
+  firebase_storage:
 
-
-
-
+flutter:
+  assets:
+    - assets/
