--- a/sky_nova/android/build.gradle
+++ b/sky_nova/android/build.gradle
@@ -12,6 +12,11 @@ subprojects {
 subprojects {
     project.evaluationDependsOn(":app")
 }
+dependencies {
+    classpath 'com.android.tools.build:gradle:7.4.1' // or the latest version
+    classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21' // or the latest version
+}
+
 
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
